update pipeline image and approach section

--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -2,68 +2,67 @@
 
 \begin{figure}[hbt!]
 	\centering
-	\includegraphics[width=0.95\linewidth]{images/method_pipeline_1.jpg}
+	\includegraphics[width=0.95\linewidth]{images/method_pipeline_1.pdf}
 	\caption{Method overview. The input is a pair of equrictangular images $I_t$ and $I_{t+1}$, output is the optical flow $\mathcal{F}_t$ from  $I_t$ and $I_{t+1}$. It compused with 3 steps: (1) ? (2) ?}
 	\label{fig:approach:pipeline}
 \end{figure}
 
 The method proposes a tangent image global warping optical flow method to mitigate the equirectangular distortion and large motion between two images, meanwhile, the backbone optical flow method hired off-the-shelf and general optical flow method $M_{\mathcal{F}}$.
+The optical flow $\textbf{f}$ is estimated pixel displacement vector $f(u,v)$ for each pixel $(u,v)$ in a sequence image pair from source image $I_{src}$ to target image $I_{tar}$.
 
-As shown in the overview diagram Fig.~\ref{fig:approach:pipeline}, our method compose with 3 steps:
+As shown in the overview diagram ~\cref{fig:approach:pipeline} our method compose with 3 steps:
 1) Estimate the optical flow $\bar{\mathcal{F}}_t$ from $I_{t}$ to ${I_{t+1}}$, then rotate the $I_{t+1}$ toward to $I_{t}$ with the $\bar{R}$ esitmation form $\mathcal{F}_t$ to generate ${\bar{I}}_{t+1}$;
 2) Estimate the optical flow ${\hat{\mathcal{F}}}_t$ from $I_{t}$ to ${\bar{I}}_{t+1}$ with CubeMap projection method $f??$, then rotate the  ${\bar{I}}_{t+1}$ toward to $I_t$ with the $\hat{R}$ esitmated from ${\hat{\mathcal{F}}}_t$ to generate ${\hat{I}}_{t+1}$;
 3) Estimate the optical flow $\tilde{\mathcal{F}}_t$ from $I_{t}$ to ${\hat{I}}_{t+1}$ with icoshedron porject, then warp  the $\tilde{\mathcal{F}}_t$ with invert of $\bar{R}$ and $\hat{R}$ to generate finnally optical flow $\mathcal{F}_t$.
 
+% why do that
+Comparing to the perspective image the equirectangular image has distortion especially at the top and bottom. We using gnomoinic projection to undistrot the image, and  use cubemap and icosahedron project to uniform sample the ERP image ~\cref{sec:approach:projstit}
 
+Because the tangent image 
+Use optical flow warping method to align the source and target images before
+Finaaly Accumulate all step optical flow together with the ~\cref{sec:approach:warping}
 
-
-The optical flow method 
-
+%The optical flow method 
 %\todolist{Rough and warp based method. Why not warp base method? CubeMap warp the target image, and Ico compute the cubemap warpped image. Finally, accumualte all optical flow together.}
 
-the Icosahedron  aligned target ERP image with Icosahdron, ;
-Accumulate all step optical flow together.
-using gnomoinic projection to undistrot the , with uniform sample the ERP image,
-to align the source and target images beore
+\subsection{Panoramic Optical Flow Definition}\label{sec:approach:definition}
 
-The optical flow $\textbf{f}$ is estimated pixel displacement vector $f(u,v)$ for each pixel $(u,v)$ in a sequence image pair from source image $I_{src}$ to target image $I_{tar}$.
+Different from the perspective image, the panoramic image is enclosed in any direction on the image,  and the coordinate is continuous.
+So the panoramic optical flow is continuous, even the pixel's motion vector is overflowed the image size.
+It's different from perspective image optical which ~\cite{??}. 
+This is one reason the perspective image optical flow method can not track well the pixel moving out the equirectangular image boundary.
 
-The $f(u,v)$ compose with $f_1(u,v)$ and $f_2(u,v)$, which is the displacement in image's horizontal direction $x$ and vertical direction $y$ respectively.
-Optical flow 
+But the continuous optical flow will introduce ambiguity, 
+%the stright line in the 3D space will project to a segement on one great circle.
+there are two paths from the source point to the target point along the great-circle on the sphere ~\cite{??}.
+To define the panoramic optical flow on equirectangular image format, we propose the following assumes:
+the pixel motion is always moving along the the shortest path of great circle;
 
-$I_{tar}(u',v')$ is corresponding the pixel $I_{src}(u + f_1(u,v), v + f_2(u,v))$.
-
-\textbf{360 Optical Flow Expression (Wrap-around)}
-\todolist{GT data how to process the Warp Around, Cross Image Boundary.Why use the without warp around optical flow?}
-
+% in the ERP image range ?
 The panoramic image projection to equirectangular image, the pixel along the x-axis is not continuous, but along the y-axis is still continuous. When the pixel position si beyond the  ${Imagewidth -1}$, the pixel position will convert to left again.
 But the pixel along the y-axis is continuous.
-\todolist{add a diagram to explain the continuation.}
+the pixel motion is always along , which is not larger than 0.5$\pi$.
+
+\TODO{Summarize the benefit of this expression? Why use the warp-around optical flow?}
+Sample is continue 
+visuzalizion friendly
+close the spherical coordinate expression
 
 \begin{figure}[hbt!]
 	\centering
 	\includegraphics[width=0.45\linewidth]{images/wrap-around-0.jpg}
-	\caption{Optical Flow wrap-around.}
+	\caption{Panoramic Optical Flow.}
 	\label{fig:app:warparound}
 \end{figure}
 
-The panoramic image's $x$ and $y$ is continual, in this way it's reasonable the pixel coordinate 0 exceed the range of image pixel $([0, image\_width), [0, image\_height))$. 
 
-The range of optical flow is 
-
-So the 360 optical flow is different with perspective image optical flow in the 
-
-, 360 optical flow is  in 
-
-So there are two-kinds of expression.
-
-One kind optical flow is just in target image range $[0, image_width - 1]$, which do not take the wrap around into account.
-
-So the range of optical flow is 
-Another's target image range is $[- n * image_width, + n * image_width]$
+\subsection{Optical Flow Warping}\label{sec:approach:warping}
 
 
-\subsection{Optical Flow Warping}
+The $f(u,v)$ compose with $f_1(u,v)$ and $f_2(u,v)$, which is the displacement in image's horizontal direction $x$ and vertical direction $y$ respectively.
+Optical flow 
+$I_{tar}(u',v')$ is corresponding the pixel $I_{src}(u + f_1(u,v), v + f_2(u,v))$.
+
 
 The tangent image which projected from a distorted image to a plain image have been proposed image segmentation and on ~\cite{eldercvpr2020}
 
@@ -80,7 +79,7 @@ The image warp, the rotation to warp the image, alignt the
 The optical flow warping, to warp the final optical flow to restore the original images optical flow.
 
 
-\subsection{Projection \& Stitching}
+\subsection{Projection \& Stitching}\label{sec:approach:projstit}
 
 
 The $\hat{\mathcal{F}_t}$ and $\tilde{\mathcal{F}}_t$ is panoramic optical flow stitching from CubeMap and Icosehedron face image (tangent image) optical flow.
