Random pass over the paper

--- a/doc/paper_draft/360flow.bib
+++ b/doc/paper_draft/360flow.bib
@@ -157,6 +157,21 @@
   issue     = {1},
 }
 
+@Article{BerteYLR2020,
+  author    = {Tobias Bertel and Mingze Yuan and Reuben Lindroos and Christian Richardt},
+  title     = {{OmniPhotos}: Casual 360° {VR} Photography},
+  journal   = ProcSIGASIA,
+  year      = {2020},
+  volume    = {39},
+  number    = {6},
+  pages     = {267:1--12},
+  _month     = dec,
+  _issn      = {0730-0301},
+  abstract  = {Virtual reality headsets are becoming increasingly popular, yet it remains difficult for casual users to capture immersive 360° VR panoramas. State-of-the-art approaches require capture times of usually far more than a minute and are often limited in their supported range of head motion. We introduce OmniPhotos, a novel approach for quickly and casually capturing high-quality 360° panoramas with motion parallax. Our approach requires a single sweep with a consumer 360° video camera as input, which takes less than 3 seconds to capture with a rotating selfie stick or 10 seconds handheld. This is the fastest capture time for any VR photography approach supporting motion parallax by an order of magnitude. We improve the visual rendering quality of our OmniPhotos by alleviating vertical distortion using a novel deformable proxy geometry, which we fit to a sparse 3D reconstruction of captured scenes. In addition, the 360° input views significantly expand the available viewing area, and thus the range of motion, compared to previous approaches. We have captured more than 50 OmniPhotos and show video results for a large variety of scenes. We will make our code available.},
+  doi       = {10.1145/3414685.3417770},
+  _url       = {https://richardt.name/omniphotos/},
+}
+
 @InProceedings{BhandZY2021,
   author    = {Keshav Bhandari and Ziliang Zong and Yan Yan},
   title     = {Revisiting Optical Flow Estimation in 360 Videos},
