--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -49,7 +49,7 @@
 %\usepackage{amsfonts}
 %\usepackage{amsmath}
 %\usepackage{amssymb}
-%\usepackage{booktabs}
+\usepackage{booktabs}
 %\usepackage{multirow}
 %\usepackage{url}
 \usepackage{doi}
@@ -65,10 +65,10 @@
 
 \begin{abstract}
 
-Panoramic image is common input of , but it has drametic distortation at top and bottom of image, 
+Panoramic image is common input of , but it has dramatic distortion at top and bottom of image, 
 The previous optical flow method use KTN to 
-But their method can not extend the conventiential optical flow method.
-in this paper we propose a (??) method which project the panoramic image to perspective images mitigating the distortaion.
+But their method can not extend the conventional optical flow method.
+in this paper we propose a (??) method which project the panoramic image to perspective images mitigating the distortion.
 It 
 1. Use Icosehedron Sampling to uniform sampling the panoramic image to generate tangent images.
 
