--- a/doc/paper_draft/sections/1-introduction.tex
+++ b/doc/paper_draft/sections/1-introduction.tex
@@ -1,4 +1,5 @@
-\section{Introduction}\label{sec:intro}
+\section{Introduction}
+\label{sec:intro}
 
 The panoramic camera is popular (cite camera name).
 
@@ -8,7 +9,7 @@ There are huge distortion at the top and bottom of the Equirectangular images, w
 
 The gnomonic projection is common tool used in geography mapping a continued curved earth surface to a plane, meanwhile map the great circle to a straight line~\cite{todo}. (More explain why gnomonic projection is good).
 
-Meanwhile, to make the spherical sampled uniformly, the tangent points (gnomonic projection center point) selected base on the Icosahedron , which split a sphere to 20 equal size faces.
+Meanwhile, to make the spherical sampled uniformly, the tangent points (gnomonic projection centre point) selected base on the Icosahedron , which split a sphere to 20 equal size faces.
 
 In this paper there are ? technical contributions:
 
