--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -1,5 +1,4 @@
-\section{Related Works}
-
+\section{Related Work}
 
 \subsection{Optical Flow}
 
@@ -25,7 +24,8 @@ Unsupervised Learning:
 which use estimated depth to generate new view point image and optical flow from single still image, to train the off-the-shelf optical flow method.
 This method propose for self-supervised learn pathway.
 
-\subsection{panoramic Image processing}
+
+\subsection{Panoramic Image Processing}
 
 Because of non-linear project between the scene and image, there is distortion in the image, especially in the poles of panoramic image.
 How to git ride of the distortion is key point of panoramic image processing method. 
@@ -65,14 +65,14 @@ Equirectangular Image format is most popular panoramic image format which have b
 - Semantic segmentation:
 
 
-\subsection{Panoramic Dataset}
+\subsection{Panoramic Datasets}
 
 
-The real word data rich and colourful, but it is very hard to estimate or measure the accurate segmentation, motion flow, e.t.c form the real word scene.
+The real word data rich and colourful, but it is very hard to estimate or measure the accurate segmentation, motion flow, etc. form the real word scene.
 So the synthetic dataset is commonly haired to generate the ground truth data for training or performance evaluation, such as Habitat \cite{SavvaKMZWJSLKMPB2019}.
 
 Meanwhile, the real word photo image is hard to estimate accurate optical flow.
-Although KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{ButleWSB2012} pinhole image optical flow, e.t.c currently don't have any public panoramic optical flow dataset is available.
+Although KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{ButleWSB2012} pinhole image optical flow, etc. currently don't have any public panoramic optical flow dataset is available.
 
 The rasterization render method OpenGL used to synthesize the ground truth optical flow.
 The equirectangular optical flow generation algorithm introduction in \cref{sec:app:panoof}.
